--- a/Sheets.dcproj/project/widget.wdgt/main.html
+++ b/Sheets.dcproj/project/widget.wdgt/main.html
@@ -11,11 +11,11 @@
     <script type="text/javascript" src="localizedStrings.js" charset="utf-8"></script>
     <script type="text/javascript" src="main.js" charset="utf-8"></script>
 </head>
-<body onload="load();" apple-part="com.apple.Dashcode.part.StackLayout" style="">
-    <div id="front" style="">
+<body onload="load();" apple-part="com.apple.Dashcode.part.StackLayout">
+    <div id="front">
         <img id="frontImg" src="Parts/Images/front.png" alt="" apple-locked="true" apple-part="com.apple.Dashcode.part.frontimage" apple-style="image-theme: 2; image-shape: 3; image-opacity: 1.00; image-top-color: 0.3,0.3,0.3,1; image-bottom-color: 0.6,0.6,0.6,1; image-radius: 10,10,10,10; image-border: 1; image-border-color: 0,0,0,0.5; image-border-width: 1; shine-on: 0; shine-strength: 0.90; shine-alpha-level: 0.67; shine-height: 0.50; glass-arc-height: 0.06; embossed-on: 0; embossed-depth: 1; embossed-shadow: 0.68; embossed-highlight: 0.3; image-include-custom: 1; image-custom-image-path: Background 3.png; image-custom-center: 1; image-custom-resize: 2; shadow-include-shadow: 1; shadow-offset: -1.00,-6.00; shadow-color: 0,0,0,0.3333;">
         <div class="apple-no-children" id="info" apple-part="com.apple.Dashcode.part.infobutton" apple-default-image-visibility="hidden"></div>
-        <div apple-part="com.apple.Dashcode.part.StackLayout" id="stack"><div id="main" apple-part-locked="true" style="">
+        <div apple-part="com.apple.Dashcode.part.StackLayout" id="stack"><div id="main" apple-part-locked="true">
                 <div apple-part="com.apple.Dashcode.part.box" id="input" ondrop="dragDrop(event)" ondragover="dragOver(event)" ondragenter="dragEnter(event)">
                     <div apple-part="com.apple.Dashcode.part.text" class="apple-text apple-no-children" apple-default-image-visibility="hidden" apple-text-overflow="ellipsis" id="drop"></div>
                 </div>
@@ -24,7 +24,7 @@
                 <img src="Images/Button-Size.png" id="img" apple-part="com.apple.Dashcode.part.image">
                 <input type="text" name="tile" value="4x4" class="apple-textfield apple-no-children" apple-part="com.apple.Dashcode.part.textfield" id="tile" onchange="updateTile(event)" onkeyup="updateTile(event)" onclick="selectIt(event)" onfocus="selectIt(event)" maxlength="0">
                 <img src="Images/Button-Tile.png" id="img1" apple-part="com.apple.Dashcode.part.image">
-            </div><div id="success" apple-part-locked="true" apple-default-image-visibility="hidden" style="">
+            </div><div id="success" apple-part-locked="true" apple-default-image-visibility="hidden">
                 <div apple-part="com.apple.Dashcode.part.text" class="apple-text apple-no-children" apple-default-image-visibility="hidden" apple-text-overflow="ellipsis" id="successText"></div>
                 <div apple-part="com.apple.Dashcode.part.roundedtextbutton" class="apple-no-children" apple-style="image-theme: 0; image-shape: 3; image-button-type: 0; image-opacity: 1.00; image-top-color: 0,0,0,0.5; image-bottom-color: 0.6,0.6,0.6,1; image-radius: 5,5,5,5; image-border: 1; image-border-color: 0,0,0,0.5; image-border-width: 1; shine-on: 1; shine-strength: 0.20; shine-alpha-level: 0.20; shine-height: 0.50; glass-arc-height: 0.00; embossed-on: 0; embossed-depth: 1; embossed-shadow: 0.5; embossed-highlight: 0.5; shadow-include-shadow: 0;" id="successButton"></div>
                 <div apple-part="com.apple.Dashcode.part.text" class="apple-text apple-no-children" apple-default-image-visibility="hidden" apple-text-overflow="ellipsis" id="successDetails"></div>
@@ -34,14 +34,14 @@
             </div><div id="wrong" apple-part-locked="true" apple-default-image-visibility="hidden" style="display: block; ">
                 <div apple-part="com.apple.Dashcode.part.text" class="apple-text apple-no-children" apple-default-image-visibility="hidden" apple-text-overflow="ellipsis" id="wrongText"></div>
                 <div apple-part="com.apple.Dashcode.part.roundedtextbutton" class="apple-no-children" apple-style="image-theme: 0; image-shape: 3; image-button-type: 0; image-opacity: 1.00; image-top-color: 0,0,0,0.5; image-bottom-color: 0.6,0.6,0.6,1; image-radius: 5,5,5,5; image-border: 1; image-border-color: 0,0,0,0.5; image-border-width: 1; shine-on: 1; shine-strength: 0.20; shine-alpha-level: 0.20; shine-height: 0.50; glass-arc-height: 0.00; embossed-on: 0; embossed-depth: 1; embossed-shadow: 0.5; embossed-highlight: 0.5; shadow-include-shadow: 0;" id="wrongButton"></div>
-            </div><div id="update" apple-part-locked="true" style="">
+            </div><div id="update" apple-part-locked="true">
                 <div apple-part="com.apple.Dashcode.part.text" class="apple-text apple-no-children" apple-default-image-visibility="hidden" apple-text-overflow="ellipsis" id="new"></div>
                 <div apple-part="com.apple.Dashcode.part.text" class="apple-text apple-no-children" apple-default-image-visibility="hidden" apple-text-overflow="ellipsis" id="newVersion"></div>
                 <div apple-part="com.apple.Dashcode.part.roundedtextbutton" class="apple-no-children" apple-style="image-theme: 0; image-shape: 3; image-button-type: 0; image-opacity: 1.00; image-top-color: 0,0,0,0.5; image-bottom-color: 0.6,0.6,0.6,1; image-radius: 5,5,5,5; image-border: 1; image-border-color: 0,0,0,0.5; image-border-width: 1; shine-on: 1; shine-strength: 0.20; shine-alpha-level: 0.20; shine-height: 0.50; glass-arc-height: 0.00; embossed-on: 0; embossed-depth: 1; embossed-shadow: 0.5; embossed-highlight: 0.5; shadow-include-shadow: 0;" id="skip"></div>
                 <div apple-part="com.apple.Dashcode.part.roundedtextbutton" class="apple-no-children" apple-style="image-theme: 0; image-shape: 3; image-button-type: 0; image-opacity: 1.00; image-top-color: 0,0,0,0.5; image-bottom-color: 0.6,0.6,0.6,1; image-radius: 5,5,5,5; image-border: 1; image-border-color: 0,0,0,0.5; image-border-width: 1; shine-on: 1; shine-strength: 0.20; shine-alpha-level: 0.20; shine-height: 0.50; glass-arc-height: 0.00; embossed-on: 0; embossed-depth: 1; embossed-shadow: 0.5; embossed-highlight: 0.5; shadow-include-shadow: 0;" id="download"></div>
             </div></div>
     </div>
-    <div id="back" style="">
+    <div id="back">
         <img id="backImg" src="Parts/Images/back.png" alt="" apple-locked="true" apple-part="com.apple.Dashcode.part.backimage" apple-style=" image-radius: 10,10,10,10; image-border: 1; image-border-color: 0,0,0,0.5; image-border-width: 1; shadow-include-shadow: 1; shadow-offset: -1.00,-6.00; shadow-color: 0,0,0,0.3333;">
         <div apple-part="com.apple.Dashcode.part.text" class="apple-text apple-no-children" apple-text-overflow="ellipsis" id="locationText" apple-style="part-height-dependent: true;"></div>
         <input type="text" name="loc" value="/opt/local/bin/" class="apple-textfield apple-no-children" apple-part="com.apple.Dashcode.part.textfield" id="loc" onchange="updateLoc(event)" onkeyup="updateLoc(event)">
@@ -49,6 +49,10 @@
         <input type="text" name="nameSprite" value="SpriteSheet" class="apple-textfield apple-no-children" apple-part="com.apple.Dashcode.part.textfield" id="nameSprite" apple-text-overflow="" maxlength="0" onkeyup="updateNameSprite(event)" onchange="updateNameSprite(event)">
         <div apple-part="com.apple.Dashcode.part.text" class="apple-text apple-no-children" apple-text-overflow="ellipsis" id="nameFileText" apple-style="part-height-dependent: true;"></div>
         <input type="text" name="nameFile" value="FileSheet-" class="apple-textfield apple-no-children" apple-part="com.apple.Dashcode.part.textfield" id="nameFile" apple-text-overflow="" maxlength="0" onkeyup="updateNameFile(event)" onchange="updateNameFile(event)">
+        <div apple-part="com.apple.Dashcode.part.text" class="apple-text apple-no-children" apple-text-overflow="ellipsis" id="scaleText"></div>
+        <div apple-part="com.apple.Dashcode.part.roundedpopupbutton" class="apple-no-children" apple-style="image-theme: 0; image-shape: 3; image-button-type: 1; image-opacity: 1.00; image-top-color: 0,0,0,0.5; image-bottom-color: 0.6,0.6,0.6,1; image-radius: 5,5,5,5; image-border: 1; image-border-color: 0,0,0,0.5; image-border-width: 1; shine-on: 1; shine-strength: 0.20; shine-alpha-level: 0.20; shine-height: 0.50; glass-arc-height: 0.00; embossed-on: 0; embossed-depth: 1; embossed-shadow: 0.5; embossed-highlight: 0.5; shadow-include-shadow: 0;" id="scale"></div>
+        <div apple-part="com.apple.Dashcode.part.text" class="apple-text apple-no-children" apple-text-overflow="ellipsis" id="outputText"></div>
+        <div apple-part="com.apple.Dashcode.part.roundedpopupbutton" class="apple-no-children" apple-style="image-theme: 0; image-shape: 3; image-button-type: 1; image-opacity: 1.00; image-top-color: 0,0,0,0.5; image-bottom-color: 0.6,0.6,0.6,1; image-radius: 5,5,5,5; image-border: 1; image-border-color: 0,0,0,0.5; image-border-width: 1; shine-on: 1; shine-strength: 0.20; shine-alpha-level: 0.20; shine-height: 0.50; glass-arc-height: 0.00; embossed-on: 0; embossed-depth: 1; embossed-shadow: 0.5; embossed-highlight: 0.5; shadow-include-shadow: 0;" id="output"></div>
         <div apple-part="com.apple.Dashcode.part.text" class="apple-text apple-no-children" apple-text-overflow="ellipsis" id="iaian7com" onclick="iaian7(event)" apple-style="part-height-dependent: true;"></div>
         <div apple-part="com.apple.Dashcode.part.text" class="apple-text apple-no-children" apple-text-overflow="ellipsis" id="text"></div>
         <div apple-part="com.apple.Dashcode.part.roundedtextbutton" class="apple-no-children" apple-style="image-theme: 0; image-shape: 3; image-button-type: 0; image-opacity: 1.00; image-top-color: 0,0,0,0.4; image-bottom-color: 0.6,0.6,0.6,1; image-radius: 5,5,5,5; image-border: 1; image-border-color: 0,0,0,0.5; image-border-width: 1; shine-on: 1; shine-strength: 0.20; shine-alpha-level: 0.20; shine-height: 0.50; glass-arc-height: 0.00; embossed-on: 0; embossed-depth: 1; embossed-shadow: 0.5; embossed-highlight: 0.5; shadow-include-shadow: 0;" id="doneSave"></div>
